--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 .vagrant/
 ubuntu-xenial-16.04-cloudimg-console.log
 .virtualisation_testing/.vagrant
+.virtualisation_testing/ubuntu-xenial-16.04-cloudimg-console.log
