--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@
 ubuntu-xenial-16.04-cloudimg-console.log
 .virtualisation_testing/.vagrant
 .virtualisation_testing/ubuntu-xenial-16.04-cloudimg-console.log
+ubuntu-bionic-18.04-cloudimg-console.log
